调整 csv2yaml 转换工具的路径处理细节, 并汉化部分终端错误提示文本

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -703,7 +703,7 @@ Body:
 - Original: "Constant Type %s is not a supported skill type.\n"
   Translation: ""
 - Original: "Conversion process has begun.\n"
-  Translation: ""
+  Translation: "迁移转换过程已开始, 若有卡顿则表示程序正在加载数据, 请耐心等待...\n"
 - Original: "Converting %[{PRIdPTR}] items in '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "正在转换 %-5[{PRIdPTR}] 个物品, 源于: '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "CopyFlags RemoveRequirement %s is invalid.\n"
@@ -961,7 +961,7 @@ Body:
 - Original: "Found the file \"%s\", which requires an upgrade.\nDo you want to convert it now? (Y/N)\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
-  Translation: "\n[{CL_WHITE}][信息][{CL_RESET}]: 发现 CSV 格式的数据文件 \"%s\" 需要被迁移到 yml 格式.\n[{CL_CYAN}][选择][{CL_RESET}]: 请问是否需要对它进行升级转换? (Y/N)\n"
+  Translation: "\n[{CL_WHITE}][信息][{CL_RESET}]: 发现文件 \"%s\" 可以被迁移到 yml 格式.\n[{CL_CYAN}][选择][{CL_RESET}]: 是否需要迁移? (Y/N)\n"
 - Original: "Found unknown gender '%c' for character '%s' (CID: %d, AID: %d), returning account gender...\n"
   Translation: ""
 - Original: "Fullness %hu exceeds maximum of 100. Capping...\n"
@@ -3805,13 +3805,13 @@ Body:
 - Original: "itemdb_read_combos: File not found \"%s\".\n"
   Translation: ""
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_combos: 列数不够, 请检查第 %d 行数据, 位于 \"%s\", 已跳过.\n"
 - Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %[{PRIu32}], skipping.\n"
   Translation: "itemdb_read_combos: 第 %d 行 (\"%s\") 包含未知的物品编号 %[{PRIu32}], 已跳过.\n"
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
 - Original: "itemdb_read_db: Insufficient columns in line %d (item with id %u), skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_db: 列数不够, 请检查第 %d 行数据 (物品编号: %u), 已跳过.\n"
 - Original: "itemdb_read_db: Invalid format (OnEquip_Script column) in line %d (item with id %u), skipping.\n"
   Translation: ""
 - Original: "itemdb_read_db: Invalid format (OnUnequip_Script column) in line %d (item with id %u), skipping.\n"
@@ -3823,11 +3823,11 @@ Body:
 - Original: "itemdb_read_db: Unknown ammo type %d for item %u, skipping.\n"
   Translation: ""
 - Original: "itemdb_read_db: Unknown item type %d for item %u, skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_db: 发现未知的物品类型: %d, 请检查编号为 %u 的物品设置, 已跳过.\n"
 - Original: "itemdb_read_db: Unknown weapon type %d for item %u, skipping.\n"
   Translation: ""
 - Original: "itemdb_read_group: Insufficient columns (found %d, need at least 3).\n"
-  Translation: ""
+  Translation: "itemdb_read_group: 列数不够 (找到 %d 列, 至少需要 3 列).\n"
 - Original: "itemdb_read_group: Non-existant item '%s'\n"
   Translation: "itemdb_read_group: 不存在的物品 '%s'\n"
 - Original: "itemdb_read_group: Random item must have a probability. Group '%s'\n"
@@ -3839,17 +3839,17 @@ Body:
 - Original: "itemdb_read_randomopt(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_randomopt: Insufficient columns in line %d of \"%s\", skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_randomopt: 列数不够, 请检查第 %d 行数据, 位于 \"%s\", 已跳过.\n"
 - Original: "itemdb_read_randomopt: Unknown random option '%s' constant, skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_randomopt: 发现未知的随机选项 (Random option) 常量: '%s', 已跳过.\n"
 - Original: "itemdb_read_randomopt_group: Invalid column entries '%d'.\n"
   Translation: ""
 - Original: "itemdb_read_randomopt_group: Invalid random group id '%s' in column %d!\n"
-  Translation: ""
+  Translation: "itemdb_read_randomopt_group: 无效的随机分组编号 (Random Group id): '%s' 位于第 %d 列!\n"
 - Original: "itemdb_readdb: File not found \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_readdb: Insufficient columns in line %d of \"%s\" (item with id %u), skipping.\n"
-  Translation: ""
+  Translation: "itemdb_readdb: 列数不够, 请检查第 %d 行数据, 位于 \"%s\" (物品编号: %u), 已跳过.\n"
 - Original: "itemdb_readdb: Invalid format (OnEquip_Script column) in line %d of \"%s\" (item with id %u), skipping.\n"
   Translation: ""
 - Original: "itemdb_readdb: Invalid format (OnUnequip_Script column) in line %d of \"%s\" (item with id %u), skipping.\n"
@@ -4743,7 +4743,7 @@ Body:
 - Original: "read_mercenary_skilldb: Invalid Mercenary skill '%s'.\n"
   Translation: ""
 - Original: "read_petdb: Insufficient columns in line %d, skipping.\n"
-  Translation: ""
+  Translation: "read_petdb: 列数不够, 请检查第 %d 行数据, 已跳过.\n"
 - Original: "read_petdb: Invalid format (Equip Script column) in line %d, skipping.\n"
   Translation: ""
 - Original: "read_petdb: Invalid format (Pet Script column) in line %d, skipping.\n"
@@ -5137,13 +5137,13 @@ Body:
 - Original: "sv_readdb: Could not process contents of line %d of \"%s\".\n"
   Translation: "sv_readdb: 无法处理第 %d 行的数据, 位于: \"%s\".\n"
 - Original: "sv_readdb: Insufficient columns in line %d of \"%s\" (found %d, need at least %d).\n"
-  Translation: ""
+  Translation: "sv_readdb: 列数不够, 请检查第 %d 行数据, 位于 \"%s\" (找到 %d 列, 至少需要 %d 列).\n"
 - Original: "sv_readdb: Reached the maximum allowed number of entries (%d) when parsing file \"%s\".\n"
   Translation: ""
 - Original: "sv_readdb: Too many columns in line %d of \"%s\" (found %d, maximum is %d).\n"
   Translation: ""
 - Original: "sv_readdb: can't read %s\n"
-  Translation: ""
+  Translation: "sv_readdb: 无法读取 \"%s\", 请检查文件是否存在.\n"
 - Original: "sv_split: unknown line delimiter 0x02%x.\n"
   Translation: ""
 - Original: "sv_unescape_c: \\x with no following hex digits\n"
