修正一处内存泄露, 并汉化部分终端提示信息

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1801,13 +1801,13 @@ Body:
 - Original: "Small Size Fix %d for %s is out of bounds, defaulting to 100.\n"
   Translation: ""
 - Original: "Source (NPC): %s (invisible/not on a map)\n"
-  Translation: ""
+  Translation: "来源 (NPC): %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
 - Original: "Source (NPC): %s at %s (%d,%d)\n"
-  Translation: ""
+  Translation: "来源 (NPC): %s 位于 %s (%d,%d)\n"
 - Original: "Source (Non-NPC type %d): name %s (invisible/not on a map)\n"
-  Translation: ""
+  Translation: "来源 (其他非 NPC 单位, 单位类型: %d): 单位名称: %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
 - Original: "Source (Non-NPC type %d): name %s at %s (%d,%d)\n"
-  Translation: ""
+  Translation: "来源 (其他非 NPC 单位, 单位类型: %d): 单位名称: %s 位于 %s (%d,%d)\n"
 - Original: "Sprite is missing.\n"
   Translation: ""
 - Original: "Sprite name for id %d is not known.\n"
@@ -3401,29 +3401,29 @@ Body:
 - Original: "conf/battle/client.conf MVP EXP reward message is enabled but it requires PACKETVER 2013-12-23 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了成就系统, 但 PACKETVER 至少要 2015-05-13 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了每日签到系统, 但此功能要求 PACKETVER 必须大于等于 2018-03-07 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中启用了每日签到系统, 但 PACKETVER 至少要 2018-03-07 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了随身银行, 但 PACKETVER 至少要 2013-07-24 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了一键换装, 但 PACKETVER 至少要 2017-02-08 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf homunculus autofeeding is enabled but it requires PACKETVER 2017-09-20 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了人工生命体自动喂养功能, 但此功能要求 PACKETVER 必须大于等于 2017-09-20 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中启用了生命体自动喂养, 但 PACKETVER 至少要 2017-09-20 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf pet auto feed is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了宠物自动喂养, 但 PACKETVER 至少要 2014-10-08 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf petevolution is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了宠物进化功能, 但 PACKETVER 至少要 2014-10-08 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf private airship system is enabled but it requires PACKETVER 2018-03-21 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了私有飞空艇系统(世界移动券), 但此功能要求 PACKETVER 必须大于等于 2018-03-21 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中启用了私有飞空艇系统, 但 PACKETVER 至少要 2018-03-21 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf refine UI is enabled but it requires PACKETVER 2016-10-12 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了精炼 UI, 但 PACKETVER 至少要 2016-10-12 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf roulette is enabled but it requires PACKETVER 2014-10-22 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了乐透大转盘, 但 PACKETVER 至少要 2014-10-22 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:bgqueue is enabled but it requires PACKETVER 2012-01-01 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了战场队列, 但 PACKETVER 至少要 2012-01-01 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:buying_store is enabled but it requires PACKETVER 2010-04-27 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了采购商店, 但 PACKETVER 至少要 2010-04-27 才支持, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:feature.auction change value to '2' to silence this warning and maintain it enabled\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:feature.auction is enabled but it is not available for clients from 2014-11-12 on, disabling...\n"
@@ -3431,7 +3431,7 @@ Body:
 - Original: "conf/battle/feature.conf:feature.auction is enabled but it is not stable on PACKETVER [{EXPAND_AND_QUOTE(PACKETVER)}], disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:search_stores is enabled but it requires PACKETVER 2010-08-03 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中启用了商店搜索, 但 PACKETVER 至少要 2010-08-03 才支持, 已禁用此功能.\n"
 - Original: "conf/char_athena.conf:char_del_option birthdate is enabled but it requires PACKETVER 2010-08-03 or newer, defaulting to email...\n"
   Translation: ""
 - Original: "conf_read_file: file is not found: %s\n"
@@ -4219,7 +4219,7 @@ Body:
 - Original: "npc_parse_script: original npc not found for duplicate in file '%s', line '%d' : %s\n"
   Translation: "npc_parse_script: 复制 NPC 时发现原始 NPC 并不存在, 请检查 '%s' 中第 '%d' 行, 原始 NPC 名称: %s\n"
 - Original: "npc_parse_shop: (MARKETSHOP) Feature is disabled, need client 20131223 or newer. Ignoring file '%s', line '%d\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
-  Translation: ""
+  Translation: "npc_parse_shop: 限购商店要求 PACKETVER 必须大于等于 2015-05-13 才支持, 已自动禁用.\n已忽略 '%s' 中第 %d 行配置的限购商店信息:\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
 - Original: "npc_parse_shop: (MARKETSHOP) Invalid item definition in file '%s', line '%d'. Ignoring the rest of the line...\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_shop: Ignoring empty shop in file '%s', line '%d'.\n"
@@ -4589,7 +4589,7 @@ Body:
 - Original: "pc_readdb_job_exp: Specified max %u for job %d, but that job's exp table only goes up to level %u.\n"
   Translation: ""
 - Original: "pc_readdb_job_exp: Value %[{PRIu64}] is too high, capping to %[{PRIu64}]...\n"
-  Translation: ""
+  Translation: "pc_readdb_job_exp: 给定的数值 %[{PRIu64}] 太大了, 已自动下调成 %[{PRIu64}]...\n"
 - Original: "pc_readdb_job_noenter_map: Invalid job %d specified.\n"
   Translation: ""
 - Original: "pc_readdb_job_noenter_map: Invalid job %s specified.\n"
