--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1801,13 +1801,13 @@ Body:
 - Original: "Small Size Fix %d for %s is out of bounds, defaulting to 100.\n"
   Translation: ""
 - Original: "Source (NPC): %s (invisible/not on a map)\n"
-  Translation: ""
+  Translation: "來源 (NPC): %s (它是不可見的單位 / 它不存在於任何一張地圖上)\n"
 - Original: "Source (NPC): %s at %s (%d,%d)\n"
-  Translation: ""
+  Translation: "來源 (NPC): %s 位於 %s (%d,%d)\n"
 - Original: "Source (Non-NPC type %d): name %s (invisible/not on a map)\n"
-  Translation: ""
+  Translation: "來源 (其他非 NPC 單位, 單位型別: %d): 單位名稱: %s (它是不可見的單位 / 它不存在於任何一張地圖上)\n"
 - Original: "Source (Non-NPC type %d): name %s at %s (%d,%d)\n"
-  Translation: ""
+  Translation: "來源 (其他非 NPC 單位, 單位型別: %d): 單位名稱: %s 位於 %s (%d,%d)\n"
 - Original: "Sprite is missing.\n"
   Translation: ""
 - Original: "Sprite name for id %d is not known.\n"
@@ -3401,29 +3401,29 @@ Body:
 - Original: "conf/battle/client.conf MVP EXP reward message is enabled but it requires PACKETVER 2013-12-23 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了成就係統, 但 PACKETVER 至少要 2015-05-13 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了每日簽到系統, 但此功能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中啟用了每日簽到系統, 但 PACKETVER 至少要 2018-03-07 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了隨身銀行, 但 PACKETVER 至少要 2013-07-24 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了一鍵換裝, 但 PACKETVER 至少要 2017-02-08 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf homunculus autofeeding is enabled but it requires PACKETVER 2017-09-20 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了人工生命體自動餵養功能, 但此功能要求 PACKETVER 必須大於等於 2017-09-20 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中啟用了生命體自動餵養, 但 PACKETVER 至少要 2017-09-20 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf pet auto feed is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了寵物自動餵養, 但 PACKETVER 至少要 2014-10-08 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf petevolution is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了寵物進化功能, 但 PACKETVER 至少要 2014-10-08 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf private airship system is enabled but it requires PACKETVER 2018-03-21 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了私有飛空艇系統(世界移動券), 但此功能要求 PACKETVER 必須大於等於 2018-03-21 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 中啟用了私有飛空艇系統, 但 PACKETVER 至少要 2018-03-21 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf refine UI is enabled but it requires PACKETVER 2016-10-12 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了精煉 UI, 但 PACKETVER 至少要 2016-10-12 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf roulette is enabled but it requires PACKETVER 2014-10-22 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了樂透大轉盤, 但 PACKETVER 至少要 2014-10-22 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:bgqueue is enabled but it requires PACKETVER 2012-01-01 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了戰場佇列, 但 PACKETVER 至少要 2012-01-01 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:buying_store is enabled but it requires PACKETVER 2010-04-27 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了採購商店, 但 PACKETVER 至少要 2010-04-27 才支援, 已禁用此功能.\n"
 - Original: "conf/battle/feature.conf:feature.auction change value to '2' to silence this warning and maintain it enabled\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:feature.auction is enabled but it is not available for clients from 2014-11-12 on, disabling...\n"
@@ -3431,7 +3431,7 @@ Body:
 - Original: "conf/battle/feature.conf:feature.auction is enabled but it is not stable on PACKETVER [{EXPAND_AND_QUOTE(PACKETVER)}], disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:search_stores is enabled but it requires PACKETVER 2010-08-03 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 中啟用了商店搜尋, 但 PACKETVER 至少要 2010-08-03 才支援, 已禁用此功能.\n"
 - Original: "conf/char_athena.conf:char_del_option birthdate is enabled but it requires PACKETVER 2010-08-03 or newer, defaulting to email...\n"
   Translation: ""
 - Original: "conf_read_file: file is not found: %s\n"
@@ -4219,7 +4219,7 @@ Body:
 - Original: "npc_parse_script: original npc not found for duplicate in file '%s', line '%d' : %s\n"
   Translation: "npc_parse_script: 複製 NPC 時發現原始 NPC 並不存在, 請檢查 '%s' 中第 '%d' 行, 原始 NPC 名稱: %s\n"
 - Original: "npc_parse_shop: (MARKETSHOP) Feature is disabled, need client 20131223 or newer. Ignoring file '%s', line '%d\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
-  Translation: ""
+  Translation: "npc_parse_shop: 限購商店要求 PACKETVER 必須大於等於 2015-05-13 才支援, 已自動禁用.\n已忽略 '%s' 中第 %d 行配置的限購商店資訊:\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
 - Original: "npc_parse_shop: (MARKETSHOP) Invalid item definition in file '%s', line '%d'. Ignoring the rest of the line...\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_shop: Ignoring empty shop in file '%s', line '%d'.\n"
@@ -4589,7 +4589,7 @@ Body:
 - Original: "pc_readdb_job_exp: Specified max %u for job %d, but that job's exp table only goes up to level %u.\n"
   Translation: ""
 - Original: "pc_readdb_job_exp: Value %[{PRIu64}] is too high, capping to %[{PRIu64}]...\n"
-  Translation: ""
+  Translation: "pc_readdb_job_exp: 給定的數值 %[{PRIu64}] 太大了, 已自動下調成 %[{PRIu64}]...\n"
 - Original: "pc_readdb_job_noenter_map: Invalid job %d specified.\n"
   Translation: ""
 - Original: "pc_readdb_job_noenter_map: Invalid job %s specified.\n"
