实现 getmobspawns 脚本指令, 用于查询指定魔物在不同地图的刷新点信息

--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -118,7 +118,7 @@ monster_active_enable: yes
 // 
 // 0: 不覆盖, 使用召唤脚本写的魔物名称 (都是英文魔物名)
 // 1: 总是使用 mob_db 中的 Name 字段进行覆盖 (英文魔物名)
-// 2: 总是使用 mob_db 中的 JName 字段进行覆盖 (中文魔物名)
+// 2: 总是使用 mob_db 中的 JapaneseName 字段进行覆盖 (中文魔物名)
 //
 // 默认值为: 2
 override_mob_names: 2
