--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -266,6 +266,10 @@ Body:
   Translation: ""
 - Original: "%s\n"
   Translation: ""
+- Original: "%s %h is out of range %d~%d. Setting to -100.\n"
+  Translation: ""
+- Original: "%s %h is out of range %d~%d. Setting to 200.\n"
+  Translation: ""
 - Original: "%s (Line %d: Column %d)\n"
   Translation: ""
 - Original: "%s - Class %d: %d\n"
@@ -476,8 +480,8 @@ Body:
   Translation: ""
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
-- Original: "Buying/Selling [%d/%d] price of %s (%hu) allows Zeny making exploit through buying/selling at discounted/overcharged prices! Defaulting Sell to 1 Zeny.\n"
-  Translation: "买入/卖出价格 [%d/%d] 在物品 %s (%hu) 中设置不合理, 利用低价买入/高价卖出技能可以刷钱! 已将卖出价格强制设为 1 Zeny.\n"
+- Original: "Buying/Selling [%d/%d] price of %s (%u) allows Zeny making exploit through buying/selling at discounted/overcharged prices! Defaulting Sell to 1 Zeny.\n"
+  Translation: "买入/卖出价格 [%d/%d] 在物品 %s (%u) 中设置不合理, 利用低价买入/高价卖出技能可以刷钱! 已将卖出价格强制设为 1 Zeny.\n"
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 的采购商店已开启, 采购 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
@@ -1098,9 +1102,13 @@ Body:
   Translation: ""
 - Original: "Invalid element %s, skipping.\n"
   Translation: ""
+- Original: "Invalid element level %hu.\n"
+  Translation: ""
 - Original: "Invalid equip location %s, defaulting to IT_ETC.\n"
   Translation: ""
 - Original: "Invalid group %s.\n"
+  Translation: ""
+- Original: "Invalid group %s. Note that 'IG_' is automatically appended to the group name.\n"
   Translation: ""
 - Original: "Invalid guild skill name \"%s\", skipping.\n"
   Translation: ""
@@ -1968,6 +1976,8 @@ Body:
   Translation: ""
 - Original: "Unknown item ID %hu in MobItem Fixed Ratio Database.\n"
   Translation: ""
+- Original: "Unknown mob %s, skipping.\n"
+  Translation: ""
 - Original: "Unknown mob %s.\n"
   Translation: ""
 - Original: "Unknown mob id %d for group %s.\n"
@@ -2326,6 +2336,8 @@ Body:
   Translation: ""
 - Original: "buildin_%s: illegal type, need integer!\n"
   Translation: ""
+- Original: "buildin_%s: mapname is 'this', but player with char id '%d' is not found.\n"
+  Translation: ""
 - Original: "buildin_%s: mapname is 'this', please attach to a player.\n"
   Translation: ""
 - Original: "buildin_%s: no arguments given!\n"
@@ -2602,6 +2614,18 @@ Body:
   Translation: ""
 - Original: "buildin_getarg: No callfunc or callsub!\n"
   Translation: ""
+- Original: "buildin_getcalendartime: Day of Month in invalid range. Must be between 1 and 31.\n"
+  Translation: ""
+- Original: "buildin_getcalendartime: Day of Week in invalid range. Must be between 0 and 6.\n"
+  Translation: ""
+- Original: "buildin_getcalendartime: Hour in invalid range. Must be between 0 and 23.\n"
+  Translation: ""
+- Original: "buildin_getcalendartime: Minute in invalid range. Must be between 0 and 59.\n"
+  Translation: ""
+- Original: "buildin_getcalendartime: Minutes and Hours are required\n"
+  Translation: ""
+- Original: "buildin_getcalendartime: You must only specify a day_of_week or a day_of_month, not both\n"
+  Translation: ""
 - Original: "buildin_getcastledata: guild castle for map '%s' not found\n"
   Translation: ""
 - Original: "buildin_getcastledata: index = '%d' is out of allowed range\n"
@@ -2672,6 +2696,8 @@ Body:
   Translation: ""
 - Original: "buildin_getmapflag: Unsupported mapflag '%d'.\n"
   Translation: ""
+- Original: "buildin_getmapspawns: Could not found valid map by map name '%s'\n"
+  Translation: ""
 - Original: "buildin_getmapxy: variable '%s' for mapX is not a server variable, but no player is attached!"
   Translation: ""
 - Original: "buildin_getmapxy: variable '%s' for mapY is not a server variable, but no player is attached!"
@@ -2679,6 +2705,8 @@ Body:
 - Original: "buildin_getmapxy: variable '%s' for mapname is not a server variable, but no player is attached!"
   Translation: ""
 - Original: "buildin_getmercinfo: Invalid type %d (char_id=%d).\n"
+  Translation: ""
+- Original: "buildin_getmobspawns: Could not found valid map by map name '%s'\n"
   Translation: ""
 - Original: "buildin_getmonsterinfo: Wrong Monster ID: %i\n"
   Translation: ""
@@ -4080,7 +4108,7 @@ Body:
   Translation: ""
 - Original: "mob_readdb_itemratio: Invalid item id %u.\n"
   Translation: ""
-- Original: "mob_readdb_itemratio: Invalid monster with ID %hu (Item:%u Col:%d).\n"
+- Original: "mob_readdb_itemratio: Invalid monster with ID %hu.\n"
   Translation: ""
 - Original: "mob_readdb_race2: Unknown mob id %d for race2 %lld.\n"
   Translation: ""
