--- a/conf/battle/skill.conf
+++ b/conf/battle/skill.conf
@@ -327,7 +327,7 @@ path_blown_halt: yes
 // iRO Wiki: 如果你的目标是Goblin，任何被称为“Goblin”的怪物都会向任务计数。.
 // 0: Off (default)
 // 1: 所有的Goblin怪物都会计数，不管魔物是否为任务魔物。 (Mob ID: 1122-1126) - iRO default
-// 2: 任何具有相同名称的怪物都将计数，不管 MOB ID 而是基于 jName 比较。
+// 2: 任何具有相同名称的怪物都将计数，不管 MOB ID 而是基于 JapaneseName 比较。
 taekwon_mission_mobname: 0
 
 // 玩家可以在地图传送点上打开传送之阵吗? (开关选项)
