顺便更新一下终端翻译数据库

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -779,7 +779,7 @@ Body:
 - Original: "Database version %hu is not supported. Maximum version is: %hu\n"
   Translation: "不支持指定的数据版本号: %hu, 当前支持的最大版本号是: %hu\n"
 - Original: "Database version %hu is outdated and should be updated. Current version is: %hu\n"
-  Translation: "数据库版本号 %hu 已经过时且必须更新. 当前支持的最小版本号是: %hu\n"
+  Translation: "当前使用的数据库版本号: %hu. 数据的字段和格式可能已经过时, 请检查更新 (当前版本号是: %hu)\n"
 - Original: "Default map: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
   Translation: "当玩家在无效的地图登录时, 会被送到: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
 - Original: "Defaulting to %s as our IP address\n"
@@ -1099,6 +1099,8 @@ Body:
 - Original: "Invalid class upper %s, defaulting to All.\n"
   Translation: ""
 - Original: "Invalid client hash (account: %s, sent md5: %s, ip: %s)\n"
+  Translation: ""
+- Original: "Invalid constant definition \"%s\", skipping.\n"
   Translation: ""
 - Original: "Invalid element %s, skipping.\n"
   Translation: ""
@@ -1659,7 +1661,7 @@ Body:
 - Original: "Received unsupported gender '%d'...\n"
   Translation: ""
 - Original: "Reduced compatibility with %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "与 %s 数据库的兼容性降低, 请检查数据文件: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Refine cost type %s is unsupported, skipping.\n"
   Translation: ""
 - Original: "Refine level %hu is invalid, skipping.\n"
@@ -1692,6 +1694,8 @@ Body:
   Translation: "依赖的装备(Equipment) %s 不存在.\n"
 - Original: "Requires ItemCost Item %s does not exist.\n"
   Translation: "依赖的物品(ItemCost Item) %s 不存在.\n"
+- Original: "Requires ItemCost Level %d is not within %s's level range of 1~%d.\n"
+  Translation: ""
 - Original: "Requires State %s is invalid.\n"
   Translation: ""
 - Original: "Requires Status %s is invalid.\n"
@@ -1812,6 +1816,8 @@ Body:
   Translation: "来源 (NPC): %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
 - Original: "Source (NPC): %s at %s (%d,%d)\n"
   Translation: "来源 (NPC): %s 位于 %s (%d,%d)\n"
+- Original: "Source (NPC): %s is located in: %s\n"
+  Translation: ""
 - Original: "Source (Non-NPC type %d): name %s (invisible/not on a map)\n"
   Translation: "来源 (其他非 NPC 单位, 单位类型: %d): 单位名称: %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
 - Original: "Source (Non-NPC type %d): name %s at %s (%d,%d)\n"
@@ -2306,6 +2312,10 @@ Body:
   Translation: ""
 - Original: "buildin_%s: '%s' is not server variable, please attach to a player.\n"
   Translation: "buildin_%s: '%s' 不是服务器变量, 需要关联到玩家才能使用.\n"
+- Original: "buildin_%s: Attempted to %s a non-existing NPC '%s' (flag=%d).\n"
+  Translation: ""
+- Original: "buildin_%s: Attempted to %s a non-existing NPC (flag=%d).\n"
+  Translation: ""
 - Original: "buildin_%s: Cannot use a player variable '%s' if no player is attached.\n"
   Translation: ""
 - Original: "buildin_%s: Invalid execute range '%d'.\n"
@@ -2564,9 +2574,9 @@ Body:
   Translation: ""
 - Original: "buildin_delequip: No item equipped at pos %d (CID=%d/AID=%d).\n"
   Translation: ""
-- Original: "buildin_delitemidx: Deleting invalid Item ID (%u).\n"
+- Original: "buildin_delitemidx: Index %d is out of the range 0-%d.\n"
   Translation: ""
-- Original: "buildin_delitemidx: Index (%d) should be from 0-%d.\n"
+- Original: "buildin_delitemidx: No item can be deleted from index %d of player %s (AID: %u, CID: %u).\n"
   Translation: ""
 - Original: "buildin_delwall: wall \"%s\" does not exist.\n"
   Translation: ""
@@ -2860,6 +2870,8 @@ Body:
   Translation: ""
 - Original: "buildin_isnpccloaked: %s is a non-existing NPC.\n"
   Translation: ""
+- Original: "buildin_isnpccloaked: non-existing NPC.\n"
+  Translation: ""
 - Original: "buildin_itemskill: Invalid skill ID %d passed to item bonus. Skipping.\n"
   Translation: ""
 - Original: "buildin_itemskill: Invalid skill name %s passed to item bonus. Skipping.\n"
@@ -2965,6 +2977,8 @@ Body:
 - Original: "buildin_open_roulette: Roulette system is disabled.\n"
   Translation: ""
 - Original: "buildin_open_roulette: This command requires PACKETVER 2014-10-22 or newer.\n"
+  Translation: ""
+- Original: "buildin_openmail: This command is not supported for PACKETVER 2015-05-13 or newer.\n"
   Translation: ""
 - Original: "buildin_openstorage2: Invalid storage_id '%d'!\n"
   Translation: ""
@@ -3620,8 +3634,6 @@ Body:
   Translation: ""
 - Original: "guild: not found member %d,%d on %d[%s]\n"
   Translation: ""
-- Original: "guild_break: '%s' got more than 4 guild aura instances! (%d)\n"
-  Translation: ""
 - Original: "guild_castledataloadack: castle id=%d not found.\n"
   Translation: ""
 - Original: "guild_castledatasave: guild castle '%d' not found\n"
@@ -4155,8 +4167,6 @@ Body:
 - Original: "npc_duplicate4instance: warp (%s) leading to instanced map (%s), but instance map is not attached to current instance.\n"
   Translation: ""
 - Original: "npc_enable: Attempted to %s a NPC '%s' on an invalid target %d.\n"
-  Translation: ""
-- Original: "npc_enable: Attempted to %s a non-existing NPC '%s' (flag=%d).\n"
   Translation: ""
 - Original: "npc_event: event not found [%s]\n"
   Translation: ""
@@ -5113,8 +5123,6 @@ Body:
 - Original: "stat error %s\n': "
   Translation: ""
 - Original: "status_calc_mob: No castle set at map %s\n"
-  Translation: ""
-- Original: "status_change_end: SC_DANCING is missing skill unit group (val1=%d, val2=%d, val3=%d, val4=%d, timer=%d, tid=%d, char_id=%d, map=%s, x=%d, y=%d). Please report this!\n"
   Translation: ""
 - Original: "status_change_start: invalid status change (%d)!\n"
   Translation: ""
