--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1757,7 +1757,10 @@
 // 地图标记 - nomerc
 3008: 当前地图禁止使用佣兵, 已自动将其隐藏.
 3009: 很抱歉, 当前地图禁止召唤佣兵.
-//3010~3011: 闲置
+
+// 地图标记 - nobank
+3010: 很抱歉, 当前地图禁止使用银行系统.
+//3011: 闲置
 
 // @title
 3012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
