补充文档并添加禁止使用物品时的提示, 避免玩家懵逼

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1775,7 +1775,7 @@
 // Mapflag - nomerc
 3008: Mercenary are not allowed on current map, make it hidden.
 3009: Sorry, mercenary are not allowed on current map.
-//3010~3011: FREE
+3011: This map prohibit use the consumable items!
 
 // @title
 3012: Usage: @title <title_id, set 0 to turn it off>
