--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1757,7 +1757,7 @@
 // 地圖標記 - nomerc
 3008: 當前地圖禁止使用傭兵, 已自動將其隱藏.
 3009: 很抱歉, 當前地圖禁止召喚傭兵.
-//3010~3011: 閒置
+3011: 很抱歉, 當前地圖禁止使用消耗型物品道具.
 
 // @title
 3012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
