实现 nouseitem 地图标记, 用于禁止玩家在地图上使用消耗型物品道具 (#425)

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1778,7 +1778,9 @@
 
 // Mapflag - nobank
 3010: This map prohibit using the bank system.
-//3011: FREE
+
+// Mapflag - nouseitem
+3011: This map prohibit use the consumable items!
 
 // @title
 3012: Usage: @title <title_id, set 0 to turn it off>
