--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1760,7 +1760,9 @@
 
 // 地图标记 - nobank
 3010: 很抱歉, 当前地图禁止使用银行系统.
-//3011: 闲置
+
+// 地图标记 - nouseitem
+3011: 很抱歉, 当前地图禁止使用消耗型物品道具.
 
 // @title
 3012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
