--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1760,7 +1760,9 @@
 
 // 地圖標記 - nobank
 3010: 很抱歉, 當前地圖禁止使用銀行系統.
-//3011: 閒置
+
+// 地圖標記 - nouseitem
+3011: 很抱歉, 當前地圖禁止使用消耗型物品道具.
 
 // @title
 3012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
