--- a/src/web/web-server.vcxproj.filters
+++ b/src/web/web-server.vcxproj.filters
@@ -59,5 +59,13 @@
     <ClInclude Include="webcnslif.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="web-server.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
