汉化相关的配置文件

--- a/conf/battle/client.conf
+++ b/conf/battle/client.conf
@@ -181,7 +181,7 @@ client_sort_storage: no
 emblem_woe_change: yes
 
 // 公会图标最多只能允许百分之多少的透明色像素点? (百分比选项)
-// 若一个公会图标中透明的部分超过设定的百分比, 那么会认为此图标无效.
+// 若上传的公会图标中透明的部分超过设定的百分比, 那么会认为此图标无效.
 emblem_transparency_limit: 80
 
 // 在隐形状态下更新敌人位置? (Note 1)
