--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -102,12 +102,18 @@ map_server_pw: ragnarok
 map_server_db: ragnarok
 map_codepage: 
 
-// MySQL Web Server
+// WEB 接口服务器专用
+// MySQL 主数据库的连接配置信息
+//
+// 提示: WEB 接口服务器需要读取 login 和 char 表,
+// 因此您必须确保此配置文件中 "登录服务器专用" 和 "角色服务器专用" 的配置信息是有效的,
+// 这样才能让 WEB 服务器可以访问持有这两个表的数据库.
 web_server_ip: 127.0.0.1
 web_server_port: 3306
 web_server_id: ragnarok
 web_server_pw: ragnarok
 web_server_db: ragnarok
+web_codepage:
 
 // 登录、地图服务器共用
 // MySQL 日志数据库的连接配置信息
@@ -221,9 +227,7 @@ roulette_table: db_roulette
 guild_storage_log: guild_storage_log
 suspend_table: suspend
 
-// Web Database Tables
-// NOTE: The web server reads the login (login) and char (guild) tables, so it needs
-//       the ability to connect to those databases.
+// WEB 接口服务器的数据库表名配置
 guild_emblems: guild_emblems
 user_configs: user_configs
 char_configs: char_configs
